<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="OK">OK</string>
    <string name="Setting">Setup</string>
    <string name="accessibility_abort_confirm_dialog_message">The Application will be aborted because it cannot work if the Accessibility Mode setting is OFF.</string>
    <string name="accessibility_abort_confirm_dialog_title">Warning</string>
    <string name="accessibility_confirm_dialog_message">The Accessibility Mode is OFF. Please change the Accessibility Mode setting.</string>
    <string name="accessibility_confirm_dialog_title">Information</string>
    <string name="alow_connection_with_headunit">Allow Connection</string>
    <string name="bluetooth_setting_off_confirm_dialog_message">The Application will be aborted because it cannot work if the Bluetooth setting is OFF.</string>
    <string name="bluetooth_setting_off_confirm_dialog_title">Warning</string>
    <string name="calibration_failed_confirm_dialog_message">Screen Calibration has Failed.</string>
    <string name="calibration_failed_confirm_dialog_title">Information</string>
    <string name="calibration_success_confirm_dialog_message">Completed.</string>
    <string name="calibration_success_confirm_dialog_title">Information</string>
    <string name="dialog_never_ask_again">Never ask again</string>
    <string name="manual_screen_calibration">Screen Calibration</string>
    <string name="not_exist_whitelist_application_dialog_message">No addable apps. Return to the Launcher Home screen.</string>
    <string name="not_exist_whitelist_application_dialog_title">Information</string>
    <string name="notification_connecting">Connecting to the head-unit...</string>
    <string name="notification_coordinating">Now connected to the head-unit.</string>
    <string name="overlay_draw_confirm_dialog_message">Drawing over other apps is not permitted. Please check your setting.</string>
    <string name="overlay_draw_confirm_dialog_title">Information</string>
    <string name="settings_title">Smartphone Control App Menu</string>
    <string name="title_activity_whitelist_application_list_activity">Available Apps</string>
    <string name="write_settings_confirm_dialog_message">Modifying the system settings is not permitted. Please check your setting.</string>
    <string name="write_settings_confirm_dialog_title">Information</string>
    <string name="accessibility_service_desc">JVCKENWOOD Cooperation Application</string>
    <string name="action_close">Close</string>
    <string name="alow_connection_with_headunit_key">alow_connection_with_headunit_key</string>
    <string name="app_name">KENWOOD Smartphone Control</string>
    <string name="app_name_JVC">JVC Smartphone Control</string>
    <string name="app_name_KWD">KENWOOD Smartphone Control</string>
    <string name="common_desc">description</string>
    <string name="common_reply_no">No</string>
    <string name="common_reply_yes">Yes</string>
    <string name="manual_screen_calibration_key">manual_screen_calibration_key</string>
    <string name="onConnecting_screen_title">Smartphone Control App Link</string>
    <string name="pref_accelerometer">pref_accelerometer</string>
    <string name="pref_key_check_overlay_permission">pref_key_check_overlay_permission</string>
    <string name="pref_key_check_write_settings_permission">pref_key_check_write_settings_permission</string>
    <string name="pref_key_overlay_buttons_gravity">pref_key_overlay_buttons_gravity</string>
    <string name="pref_key_overlay_buttons_offset">pref_key_overlay_buttons_offset</string>
    <string name="pref_key_pointer_speed">pref_key_pointer_speed</string>
    <string name="pref_key_whitelist_car_type">pref_key_whitelist_car_type</string>
    <string name="pref_key_whitelist_country">pref_key_whitelist_country</string>
    <string name="pref_key_whitelist_function_addition">pref_key_whitelist_function_addition</string>
    <string name="pref_key_whitelist_function_market">pref_key_whitelist_function_market</string>
    <string name="pref_key_whitelist_function_model">pref_key_whitelist_function_model</string>
    <string name="pref_key_whitelist_language">pref_key_whitelist_language</string>
    <string name="pref_key_whitelist_select_name">pref_key_whitelist_select_name</string>
    <string name="pref_key_whitelist_shimuke">pref_key_whitelist_shimuke</string>
    <string name="pref_orientation">pref_orientation</string>
    <string name="pref_stop_calibration_received">pref_stop_calibration_received</string>
    <string name="ver_prefix">Version</string>
</resources>
