<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">
        <TextView
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accessibility_confirm_dialog_message"/>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:textSize="20sp"
            android:textColor="#fff"
            android:id="@+id/button_overlay_dialog_ok"
            android:background="@drawable/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:layout_weight="1"/>
        <Button
            android:textSize="20sp"
            android:textColor="#fff"
            android:id="@+id/button_overlay_dialog_cancel"
            android:background="@drawable/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
