<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/activity_settings_title_font_size"
        android:textColor="@color/title_text"
        android:layout_gravity="center_horizontal"
        android:id="@+id/text_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_settings_title_top_margin"
        android:text="@string/settings_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:textSize="@dimen/activity_settings_button_font_size"
        android:textColor="@drawable/button_text_color"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_settings_allow_connection_with_headunit"
        android:background="@drawable/button_settings_allow_connection_with_headunit_unselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alow_connection_with_headunit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:textSize="@dimen/activity_settings_button_font_size"
        android:textColor="@drawable/button_text_color"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_settings_manual_screen_calibration"
        android:background="@drawable/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_screen_calibration"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_gravity="right"
        android:id="@+id/button_settings_back"
        android:background="@drawable/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_settings_back_button_bottom_margin"/>
</LinearLayout>
